# Music_Player_Qt_QML

./: CMakeLists.txt  README.md  qml.qrc
headers/: AudioInfo.h  AudioSearchModel.h  Database.h  PlayerController.h
qml/: AudioInfoBox.qml  PlayListPanel.qml  SearchField.qml  SearchPanel.qml  TextButton.qml  main.qml
src/: AudioInfo.cpp  AudioSearchModel.cpp  Database.cpp  PlayerController.cpp  main.cpp
